Add drug interaction model artifacts and notebook outputs
Added trained interaction classifier, feature columns, and label encoding files to the models directory. Updated exploration.ipynb to include synthetic data generation, model training, feature extraction, and inference outputs. Minor metadata cleanup in drug_tolerance_model/exploration.ipynb.

--- a/backend/ML/drug_interaction_model/exploration.ipynb
+++ b/backend/ML/drug_interaction_model/exploration.ipynb
@@ -7,14 +7,10 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pandas'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Import necessary libraries\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpd\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnp\u001b[39;00m\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mjson\u001b[39;00m\n",
-      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'pandas'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ Libraries imported successfully\n"
      ]
     }
    ],
@@ -53,10 +49,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "92878b81",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "⚠ File not found: ../../data_collector/processed/drug_profiles.json\n",
+      "Creating synthetic sample data for demonstration...\n",
+      "\n",
+      "Sample drugs: ['MDMA', 'LSD', 'Alcohol', 'Cannabis', 'Cocaine']\n"
+     ]
+    }
+   ],
    "source": [
     "def load_drug_profiles(data_path='../../data_collector/processed/drug_profiles.json'):\n",
     "    \"\"\"\n",
@@ -145,10 +152,244 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "27271534",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ Extracted features for 5 drugs\n",
+      "Feature dimensions: (5, 24)\n",
+      "\n",
+      "Feature columns:\n",
+      "['serotonin_release', 'serotonin_agonist', 'dopamine_release', 'dopamine_reuptake', 'gaba_positive', 'nmda_antagonist', 'stimulant', 'cb1_agonist', 'opioid', 'dopamine_modulation', 'half_life_norm', 'duration_norm', 'cat_stimulant', 'cat_depressant', 'cat_psychedelic', 'cat_entactogen', 'cat_dissociative', 'cat_cannabinoid', 'flag_serotonergic', 'flag_respiratory_depressant', 'flag_gaba', 'flag_maoi', 'flag_cardiovascular', 'flag_seizure_risk']\n",
+      "\n",
+      "Sample features:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>serotonin_release</th>\n",
+       "      <th>serotonin_agonist</th>\n",
+       "      <th>dopamine_release</th>\n",
+       "      <th>dopamine_reuptake</th>\n",
+       "      <th>gaba_positive</th>\n",
+       "      <th>nmda_antagonist</th>\n",
+       "      <th>stimulant</th>\n",
+       "      <th>cb1_agonist</th>\n",
+       "      <th>opioid</th>\n",
+       "      <th>dopamine_modulation</th>\n",
+       "      <th>...</th>\n",
+       "      <th>cat_psychedelic</th>\n",
+       "      <th>cat_entactogen</th>\n",
+       "      <th>cat_dissociative</th>\n",
+       "      <th>cat_cannabinoid</th>\n",
+       "      <th>flag_serotonergic</th>\n",
+       "      <th>flag_respiratory_depressant</th>\n",
+       "      <th>flag_gaba</th>\n",
+       "      <th>flag_maoi</th>\n",
+       "      <th>flag_cardiovascular</th>\n",
+       "      <th>flag_seizure_risk</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>MDMA</th>\n",
+       "      <td>0.9</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.60</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>LSD</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.95</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Alcohol</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cannabis</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cocaine</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.95</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 24 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          serotonin_release  serotonin_agonist  dopamine_release  \\\n",
+       "MDMA                    0.9               0.00               0.3   \n",
+       "LSD                     0.0               0.95               0.0   \n",
+       "Alcohol                 0.0               0.00               0.0   \n",
+       "Cannabis                0.0               0.00               0.0   \n",
+       "Cocaine                 0.0               0.00               0.0   \n",
+       "\n",
+       "          dopamine_reuptake  gaba_positive  nmda_antagonist  stimulant  \\\n",
+       "MDMA                    0.0            0.0              0.0       0.60   \n",
+       "LSD                     0.0            0.0              0.0       0.00   \n",
+       "Alcohol                 0.0            0.8              0.3       0.00   \n",
+       "Cannabis                0.0            0.0              0.0       0.00   \n",
+       "Cocaine                 0.9            0.0              0.0       0.95   \n",
+       "\n",
+       "          cb1_agonist  opioid  dopamine_modulation  ...  cat_psychedelic  \\\n",
+       "MDMA              0.0     0.0                  0.0  ...              0.0   \n",
+       "LSD               0.0     0.0                  0.2  ...              1.0   \n",
+       "Alcohol           0.0     0.0                  0.0  ...              0.0   \n",
+       "Cannabis          0.9     0.0                  0.0  ...              0.0   \n",
+       "Cocaine           0.0     0.0                  0.0  ...              0.0   \n",
+       "\n",
+       "          cat_entactogen  cat_dissociative  cat_cannabinoid  \\\n",
+       "MDMA                 1.0               0.0              0.0   \n",
+       "LSD                  0.0               0.0              0.0   \n",
+       "Alcohol              0.0               0.0              0.0   \n",
+       "Cannabis             0.0               0.0              1.0   \n",
+       "Cocaine              0.0               0.0              0.0   \n",
+       "\n",
+       "          flag_serotonergic  flag_respiratory_depressant  flag_gaba  \\\n",
+       "MDMA                    1.0                          0.0        0.0   \n",
+       "LSD                     1.0                          0.0        0.0   \n",
+       "Alcohol                 0.0                          1.0        1.0   \n",
+       "Cannabis                0.0                          0.0        0.0   \n",
+       "Cocaine                 0.0                          0.0        0.0   \n",
+       "\n",
+       "          flag_maoi  flag_cardiovascular  flag_seizure_risk  \n",
+       "MDMA            0.0                  0.0                0.0  \n",
+       "LSD             0.0                  0.0                0.0  \n",
+       "Alcohol         0.0                  0.0                0.0  \n",
+       "Cannabis        0.0                  0.0                0.0  \n",
+       "Cocaine         0.0                  1.0                0.0  \n",
+       "\n",
+       "[5 rows x 24 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def extract_drug_features(drug_profile):\n",
     "    \"\"\"\n",
@@ -213,10 +454,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "9d3ac1fb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "⚠ File not found: ../../data_collector/processed/known_interactions.json\n",
+      "Creating synthetic sample interaction data...\n",
+      "\n",
+      "Sample interactions: 5\n",
+      "  MDMA + Alcohol = Dangerous\n",
+      "  LSD + Cannabis = Caution\n",
+      "  Cocaine + Alcohol = Dangerous\n"
+     ]
+    }
+   ],
    "source": [
     "def load_known_interactions(data_path='../../data_collector/processed/known_interactions.json'):\n",
     "    \"\"\"\n",
@@ -276,10 +531,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "9e8dd222",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ Created 5 training samples\n",
+      "Feature dimensions: (5, 40)\n",
+      "\n",
+      "Classification distribution:\n",
+      "Caution      3\n",
+      "Dangerous    2\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
     "def create_combination_features(drug_a_name, drug_b_name, features_df):\n",
     "    \"\"\"\n",
@@ -360,10 +629,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "ba21bc88",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ Model trained successfully\n",
+      "Feature importances (top 10):\n",
+      "                        feature  importance\n",
+      "flag_respiratory_depressant_any        0.50\n",
+      "            nmda_antagonist_max        0.25\n",
+      "            nmda_antagonist_sum        0.25\n",
+      "          serotonin_release_sum        0.00\n",
+      "           dopamine_release_sum        0.00\n",
+      "          serotonin_release_max        0.00\n",
+      "          serotonin_agonist_sum        0.00\n",
+      "          serotonin_agonist_max        0.00\n",
+      "          dopamine_reuptake_max        0.00\n",
+      "          dopamine_reuptake_sum        0.00\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
@@ -411,10 +700,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "032e5bfa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ Inference function ready\n"
+     ]
+    }
+   ],
    "source": [
     "def predict_interaction_risk(drug_a_name, drug_b_name, \n",
     "                            features_df, model, \n",
@@ -576,10 +873,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "d8984df3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "============================================================\n",
+      "Testing on DOCUMENTED combinations:\n",
+      "============================================================\n",
+      "\n",
+      "MDMA + Alcohol\n",
+      "  Classification: Dangerous (High confidence)\n",
+      "  Confidence Score: 1.00\n",
+      "  Reasoning:\n",
+      "    - Serotonergic + depressant\n",
+      "    - Dehydration risk\n",
+      "    - Liver toxicity\n",
+      "\n",
+      "LSD + Cannabis\n",
+      "  Classification: Caution (High confidence)\n",
+      "  Confidence Score: 1.00\n",
+      "  Reasoning:\n",
+      "    - Can intensify psychedelic effects\n",
+      "    - Anxiety risk in some users\n",
+      "\n",
+      "Cocaine + Alcohol\n",
+      "  Classification: Dangerous (High confidence)\n",
+      "  Confidence Score: 1.00\n",
+      "  Reasoning:\n",
+      "    - Forms cocaethylene\n",
+      "    - Cardiotoxic\n",
+      "    - Additive cardiovascular stress\n",
+      "\n",
+      "============================================================\n",
+      "Testing on UNDOCUMENTED combinations:\n",
+      "============================================================\n",
+      "\n",
+      "MDMA + Cannabis\n",
+      "  Classification: Caution (Low confidence)\n",
+      "  Confidence Score: 0.47\n",
+      "  Reasoning:\n",
+      "    - Limited mechanistic overlap detected\n",
+      "    - Insufficient human data for this specific combination\n",
+      "  Similar documented combinations:\n",
+      "    - MDMA + LSD: Caution (similarity: 0.66)\n",
+      "    - MDMA + Alcohol: Dangerous (similarity: 0.62)\n",
+      "    - LSD + Cannabis: Caution (similarity: 0.52)\n",
+      "  Note: This classification is inferred from pharmacological similarity and should be treated as a conservative guideline, not a statement of safety.\n",
+      "\n",
+      "LSD + Cocaine\n",
+      "  Classification: Caution (Low confidence)\n",
+      "  Confidence Score: 0.47\n",
+      "  Reasoning:\n",
+      "    - Limited mechanistic overlap detected\n",
+      "    - Insufficient human data for this specific combination\n",
+      "  Similar documented combinations:\n",
+      "    - MDMA + LSD: Caution (similarity: 0.68)\n",
+      "    - Cocaine + Alcohol: Dangerous (similarity: 0.56)\n",
+      "    - LSD + Cannabis: Caution (similarity: 0.51)\n",
+      "  Note: This classification is inferred from pharmacological similarity and should be treated as a conservative guideline, not a statement of safety.\n"
+     ]
+    }
+   ],
    "source": [
     "# Test on documented combinations (should match known classification)\n",
     "print(\"=\" * 60)\n",
@@ -645,10 +1003,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "8ca786d1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ Model saved to models\\interaction_classifier.pkl\n",
+      "✓ Label encoding saved to models\\label_encoding.json\n",
+      "✓ Feature columns saved to models\\feature_columns.json\n",
+      "\n",
+      "✓ Model export complete. Ready for API integration.\n"
+     ]
+    }
+   ],
    "source": [
     "import pickle\n",
     "from pathlib import Path\n",
