--- a/backend/ML/drug_tolerance_model/exploration.ipynb
+++ b/backend/ML/drug_tolerance_model/exploration.ipynb
@@ -4,11 +4,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e8fdb529",
-   "metadata": {
-    "vscode": {
-     "languageId": "code"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Import necessary libraries\n",
@@ -49,11 +45,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "63de2e79",
-   "metadata": {
-    "vscode": {
-     "languageId": "code"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def load_tolerance_data(data_path='../../data_collector/processed/tolerance_models.json'):\n",
@@ -177,11 +169,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0703b3dc",
-   "metadata": {
-    "vscode": {
-     "languageId": "code"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def extract_tolerance_features(substance_data):\n",
@@ -263,11 +251,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f5650cc8",
-   "metadata": {
-    "vscode": {
-     "languageId": "code"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import cross_val_score\n",
@@ -308,11 +292,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f7797cc3",
-   "metadata": {
-    "vscode": {
-     "languageId": "code"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def estimate_tolerance_model(substance_profile, \n",
@@ -411,11 +391,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "beddf8f4",
-   "metadata": {
-    "vscode": {
-     "languageId": "code"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Test on known substances (should be similar to documented values)\n",
@@ -509,11 +485,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a5610ebb",
-   "metadata": {
-    "vscode": {
-     "languageId": "code"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Train Random Forest for feature importance analysis\n",
@@ -570,11 +542,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0d4cfd23",
-   "metadata": {
-    "vscode": {
-     "languageId": "code"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pickle\n",
@@ -652,8 +620,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv (3.14.2)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.14.2"
   }
  },
  "nbformat": 4,
