Refactor drug interaction config and add tolerance model
Moved drug_interaction.yaml up one directory and updated references in interaction_model.ipynb. Added new tolerance_model.ipynb and generated tolerance_neuro_buckets.json for drug tolerance modeling.

--- a/backend/ML/drug_interaction_model/interaction_model.ipynb
+++ b/backend/ML/drug_interaction_model/interaction_model.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 34,
    "id": "a555222a",
    "metadata": {},
    "outputs": [
@@ -71,7 +71,7 @@
      "text": [
       "DRUGS_PATH: C:\\Users\\USER\\dev\\code\\mobile_drug_use_app\\backend\\ML\\drugs.json\n",
       "COMBOS_PATH: C:\\Users\\USER\\dev\\code\\mobile_drug_use_app\\backend\\ML\\combos.json\n",
-      "YAML_PATH: C:\\Users\\USER\\dev\\code\\mobile_drug_use_app\\backend\\ML\\drug_interaction_model\\drug_interaction.yaml\n",
+      "YAML_PATH: C:\\Users\\USER\\dev\\code\\mobile_drug_use_app\\backend\\ML\\drug_interaction.yaml\n",
       "✓ Paths set\n"
      ]
     }
@@ -83,7 +83,8 @@
     "# so ../drugs.json and ../combos.json are correct relative paths.\n",
     "DRUGS_PATH = Path('..') / 'drugs.json'\n",
     "COMBOS_PATH = Path('..') / 'combos.json'\n",
-    "YAML_PATH = Path('drug_interaction.yaml')\n",
+    "# drug_interaction.yaml was moved to backend/ML/drug_interaction.yaml\n",
+    "YAML_PATH = Path('..') / 'drug_interaction.yaml'\n",
     "\n",
     "print('DRUGS_PATH:', DRUGS_PATH.resolve())\n",
     "print('COMBOS_PATH:', COMBOS_PATH.resolve())\n",
@@ -172,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 35,
    "id": "3c9ca175",
    "metadata": {},
    "outputs": [
