Improve tolerance model config and neuro bucket data
Enhanced YAML config parsing in both interaction and tolerance models to support multiple exclude keys and improved category handling. Updated tolerance_neuro_buckets.json to expand the exclude list and remove or correct neuro bucket assignments for several substances, aligning with new config logic. Added Supabase category refresh logic to tolerance_model.ipynb for dynamic category updates.

--- a/backend/ML/drug_interaction_model/interaction_model.ipynb
+++ b/backend/ML/drug_interaction_model/interaction_model.ipynb
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "id": "3c9ca175",
    "metadata": {},
    "outputs": [
@@ -182,7 +182,7 @@
      "output_type": "stream",
      "text": [
       "✓ Loaded drug_interaction.yaml config\n",
-      "  exclude: 11 aliases: 11 groups: 10 separate: 1\n",
+      "  exclude_all: 23 aliases: 11 groups: 10 separate: 1\n",
       "benzodiazepines -> None canon= benzodiazepines\n",
       "diazepam -> diazepam canon= benzodiazepines\n",
       "opioids -> None canon= opioids\n",
@@ -206,9 +206,19 @@
     "        obj = yaml.safe_load(f)\n",
     "    return obj if isinstance(obj, dict) else {}\n",
     "\n",
+    "def _yaml_list(cfg: dict, *keys: str) -> List[str]:\n",
+    "    out: List[str] = []\n",
+    "    for k in keys:\n",
+    "        v = cfg.get(k)\n",
+    "        if isinstance(v, list):\n",
+    "            out.extend([x for x in v if isinstance(x, str)])\n",
+    "    return out\n",
+    "\n",
     "INTERACTION_CFG = load_yaml(YAML_PATH) if YAML_PATH.exists() else {}\n",
     "\n",
-    "EXCLUDE_SET = {normalize_name(x) for x in (INTERACTION_CFG.get('exclude') or []) if isinstance(x, str)}\n",
+    "# Support multiple YAML keys; for interaction we only honor the global exclude list\n",
+    "EXCLUDE_ALL = _yaml_list(INTERACTION_CFG, 'exclude', 'exclude from all', 'exclude_from_all')\n",
+    "EXCLUDE_SET = {normalize_name(x) for x in EXCLUDE_ALL if isinstance(x, str)}\n",
     "SEPARATE_SET = {normalize_name(x) for x in (INTERACTION_CFG.get('separate') or []) if isinstance(x, str)}\n",
     "ALIASES = {normalize_name(k): normalize_name(v) for k, v in (INTERACTION_CFG.get('aliases') or {}).items() if isinstance(k, str) and isinstance(v, str)}\n",
     "\n",
@@ -274,7 +284,7 @@
     "    return DRUG_KEY_BY_NORM.get(canon) or DRUG_KEY_BY_NORM.get(normalize_name(name))\n",
     "\n",
     "print('✓ Loaded drug_interaction.yaml config')\n",
-    "print('  exclude:', len(EXCLUDE_SET), 'aliases:', len(ALIASES), 'groups:', len(GROUP_MEMBERS), 'separate:', len(SEPARATE_SET))\n",
+    "print('  exclude_all:', len(EXCLUDE_ALL), 'aliases:', len(ALIASES), 'groups:', len(GROUP_MEMBERS), 'separate:', len(SEPARATE_SET))\n",
     "\n",
     "# sanity checks for group-ish keys used by combos.json\n",
     "for k in ['benzodiazepines', 'diazepam', 'opioids', 'alcohol', 'ghb', 'ghb/gbl', 'maois', 'ssris', 'ssri', 'amphetamines', 'amphetamine']:\n",
